CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.3        |
+-----------------------+
BUGFIXES


IMPROVEMENTS
23-10-05	Added support for observers with SGL_Oberserver and SGL_Observable
21-10-05    Grouped pre + post processing tasks together by name, renamed Tasks.php 
            to Process.php to respect namespace
20-10-05    Added php4/5 compatible delegator class

+-----------------------+
| VERSION: 0.5.2        |
+-----------------------+
BUGFIXES
20-10-05    Fixed installer errors
18-10-05    Fixed nav caching error (Andy Crain)
18-10-05    Fixed error where enabling logging failed to include Log class.

IMPROVEMENTS
18-10-05    Added support for MaxDB (Andreas Singer)

+-----------------------+
| VERSION: 0.5.1        |
+-----------------------+
BUGFIXES
12-10-05    Fixed error where pages without a section id assumed html title "none"

IMPROVEMENTS
14-10-05    
14-10-05    Added SGL_Array class to accomodate the removeBlanks method
14-10-05    All managers now fire their parents' constructors, ie: parent::SGL_Manager();
14-10-05    Request type now context sensitive, HTTP and CLI types supported
14-10-05    Implemented Intercepting Filter pattern so program workflow can now be
            controlled and customised with pre and post-process tasks.  See
            http://www.phpkitchen.com/index.php?/archives/725-Modularising-Workflow-with-an-Intercepting-Filter.html
14-10-05    Added SGL_View class so template engine is now configurable, Flexy 
            implemented as the default driver.  See
            http://www.phpkitchen.com/index.php?/archives/724-Implementing-an-Output-Renderer-Strategy.html
14-10-05    SGL_Url::getSignificantSegments renamed to toPartialArray
14-10-05    SGL_Url now uses a parser strategy and can handle Seagull urls as well as 
            traditional querystring format, url object stored in SGL_Registry
14-10-05    Moved resolution of $_SERVER['PHP_SELF'] to SGL_URL::resolveServerVars($conf) in 